--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-	"name": "angular-activerecord",
-	"version": "0.1.0",
-	"description": "A Backbone.Model inspired modellayer for AngularJS",
-	"main": "src/angular-activerecord.js",
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/bfanger/angular-activerecord.git"
-	},
-	"scripts": {
-		"test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS"
-	},
-	"readmeFilename": "Readme.md",
-	"dependencies": {
-		"karma": "~0.8.5"
-	}
+  "name": "angular-activerecord",
+  "version": "0.2.0",
+  "description": "A Backbone.Model inspired modellayer for AngularJS",
+  "main": "src/angular-activerecord.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/bfanger/angular-activerecord.git"
+  },
+  "scripts": {
+    "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS"
+  },
+  "readmeFilename": "Readme.md",
+  "dependencies": {},
+  "devDependencies": {
+    "karma-script-launcher": "~0.1.0",
+    "karma-chrome-launcher": "~0.1.0",
+    "karma-firefox-launcher": "~0.1.0",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "karma-jasmine": "~0.1.0",
+    "karma-requirejs": "~0.1.0",
+    "karma-coffee-preprocessor": "~0.1.0",
+    "karma-phantomjs-launcher": "~0.1.0",
+    "karma": "~0.10.1"
+  }
 }
