--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
 	"name": "angular-activerecord",
 	"description": "A Backbone.Model inspired modellayer for AngularJS",
 	"version": "0.2.0",
+	"main": "src/angular-activerecord.js",
 	"repository": {
 		"type": "git",
 		"url": "git://github.com/bfanger/angular-activerecord.git"
