--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
 	"name": "angular-activerecord",
 	"description": "A Backbone.Model inspired modellayer for AngularJS",
-	"version": "0.2.0",
+	"version": "0.2.1",
 	"main": "src/angular-activerecord.js",
 	"repository": {
 		"type": "git",
@@ -11,5 +11,12 @@
 		"jasmine": "*",
 		"angular": "*",
 		"angular-mocks": "*"
-	}
+	},
+	"ignore": [
+		"**/.*",
+		"test",
+		"karma.conf.js",
+		"package.json",
+		"bower.json"
+	]
 }
